<resources>
    <string name="app_name">ENMAR Note Hub</string>
    <string name="default_url">https://enmar.com.bd/note</string>
    <string name="offline_title">ইন্টারনেট সংযোগ বিচ্ছিন্ন</string>
    <string name="offline_subtitle">দয়া করে আপনার ইন্টারনেট সংযোগ চেক করে পুনরায় চেষ্টা করুন।</string>
    <string name="btn_retry">আবার চেষ্টা করুন</string>
    <string name="btn_settings">সার্ভার লিঙ্ক পরিবর্তন</string>
    <string name="dialog_url_title">সার্ভার URL পরিবর্তন</string>
    <string name="dialog_url_hint">উদা: https://enmar.com.bd/note</string>
    <string name="btn_save">সংরক্ষণ করুন</string>
    <string name="btn_cancel">বাতিল</string>
</resources>
